WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112133
[BlackBerry] SelectionHandler: fix truncated line
https://bugs.webkit.org/show_bug.cgi?id=112133
Summary
[BlackBerry] SelectionHandler: fix truncated line
Alberto Garcia
Reported
2013-03-12 04:19:57 PDT
One of the call to fatFingersResult.nodeAsElementIfApplicable() was somehow truncated when the selection start animation was upstreamed in
r144640
.
http://trac.webkit.org/changeset/144640/trunk/Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp
Attachments
Patch
(1.84 KB, patch)
2013-03-12 04:21 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-03-12 04:21:58 PDT
Created
attachment 192707
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-03-12 05:04:19 PDT
Comment on
attachment 192707
[details]
Patch Oooops
WebKit Review Bot
Comment 3
2013-03-12 05:31:46 PDT
Comment on
attachment 192707
[details]
Patch Clearing flags on attachment: 192707 Committed
r145534
: <
http://trac.webkit.org/changeset/145534
>
WebKit Review Bot
Comment 4
2013-03-12 05:31:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug