[BlackBerry] SelectionHandler: fix truncated line https://bugs.webkit.org/show_bug.cgi?id=112133

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-03-12
Reviewed by Carlos Garcia Campos.

One of the calls to fatFingersResult.nodeAsElementIfApplicable()
was somehow truncated when the selection start animation was
upstreamed in r144640.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectAtPoint):

Canonical link: https://commits.webkit.org/130460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145534 268f45cc-cd09-0410-ab3c-d52691b4dbfc